fix overflow

--- a/src/components/Shows/Shows.scss
+++ b/src/components/Shows/Shows.scss
@@ -12,7 +12,7 @@
         font-size: 32px;
     }
     .table-wrap {
-        overflow-x: scroll;
+        // overflow-x: scroll;
 
     }
     
